Final touches to https://svn.eionet.europa.eu/projects/Reportnet/ticket/2424 + implementation of https://svn.eionet.europa.eu/projects/Reportnet/ticket/2390